add naive machine jp

--- a/jp/project/logo.html
+++ b/jp/project/logo.html
@@ -12,6 +12,23 @@
 
     <div class="content">
       <p>自分とクライエントのためのロゴ作品。</p>
+      <p> </p>
+      <p> </p>
+
+      <img src="../../image/logo/Naive Machine-01.png" width="100%"></img>
+      <img src="../../image/logo/Naive Machine-02.png" width="100%"></img>
+      <p> </p>
+      <p> </p>
+
+      <div class="twosplit">
+        <p> ナイブ・マシン</p>
+        <p>2024</p>
+      </div>
+      <p> </p>
+      <p> </p>
+      <p> </p>
+      <p> </p>
+
 
       <img src="../../image/logo/Logos layout-01.png" width="100%"></img>
       <div class="twosplit">
