add english naive machine, JP todo

--- a/garments.html
+++ b/garments.html
@@ -87,6 +87,12 @@
             <p>YEAR</p>
           </div>
 
+          <a href="javascript:void(0);" onclick="window.open('project/naive-machine.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
+            <p > Naïve Machine</p>
+            <p > </p>
+            <p> 2024 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Kafka's Daughter</p>
             <p></p>
