--- a/index-year.html
+++ b/index-year.html
@@ -84,6 +84,18 @@
         <p style="text-align: right;">Filter by: <u><a href="index.html">Category</a></u>/ <a href="index-year.html">Year</a></p>
         <section>
 
+          <p> 2024</p>
+          <div class="listSplit">
+            <p>TITLE</p>
+            <p>CATEGORY</p>
+            <p>YEAR</p>
+          </div>
+          <a href="javascript:void(0);" onclick="window.open('project/naive-machine.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
+            <p > Naïve Machine</p>
+            <p > Garments</p>
+            <p> 2024 </p>
+          </div></a>
+
           <p> 2023</p>
           <div class="listSplit">
             <p>TITLE</p>
