--- a/gallery.html
+++ b/gallery.html
@@ -86,6 +86,7 @@
         <p></p>
         <p></p>
         <p></p>
+        <a href="javascript:void(0);" onclick="window.open('project/naive-machine.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/naive_machine.jpg"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/illustration.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/kafka.jpeg"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/radiofield.png"></img></a>
