--- a/jp/index-old.html
+++ b/jp/index-old.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body class="page">
+<body class="page" lang="jp">
 
   <div class="overall">
 
@@ -24,12 +24,9 @@
         <p></p>
         <p  id="title">➝ ケイレブ・ウッドワード</p>
 
-        <p id="info" style="color:white;">.</p>
 
-        <p>国語: <u><a href="../index-year.html">en</a></u> /<a href="../jp/index-year.html"> jp </a></p>
-
-
-
+        <p id="info">.</p>
+        <p >国語: <u><a href="../index.html">en</a></u> /<a href="../jp/index.html"> jp </a></p>
 
         <p></p>
 
@@ -80,170 +77,175 @@
     <div class="content">
 
       <div id="theList">
-        <p style="text-align: right;">フィルター: <u><a href="index.html">種類</a></u>/ <a href="index-year.html">年</a></p>
+        <p style="text-align: right;">フィルター: <a href="index.html">種類</a>/ <u><a href="index-year.html">年</a></u></p>
         <section>
+          <p> オブジェクト</p>
 
-          <p> 2023</p>
           <div class="listSplit">
             <p>名称</p>
-            <p>種類</p>
+            <p></p>
             <p>年</p>
           </div>
 
-          <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > 絵 </p>
-            <p > グラフィック</p>
-            <p> 2023 </p>
-          </div></a>
-
-          <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > カフカの娘</p>
-            <p>服</p>
-            <p> 2023</p>
-          </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/perfume.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > マシン・香水 </p>
-            <p >オブジェクト</p>
+            <p ></p>
             <p> 2023 </p>
           </div></a>
 
-
-          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>屋上アンテナ</p>
-            <p>その他</p>
-            <p> 2021 - 今</p>
-          </div></a>
-
-
-        </section>
-        <br>
-        <br>
-
-
-        <section>
-          <p> 2022</p>
-
-          <div class="listSplit">
-            <p>名称</p>
-            <p>種類</p>
-            <p>年</p>
-          </div>
-
-          <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
-            <p>電波庭 </p>
-            <p>建築物</p>
-            <p> 2022 </p>
-          </div></a>
-
           <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p >マシン・メガネ</p>
-            <p >オブジェクト</p>
+            <p > マシン・メガネ </p>
+            <p ></p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > 螺子で綴じた本 </p>
-            <p >オブジェクト</p>
+            <p ></p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > 放射計の窓 </p>
-            <p >オブジェクト</p>
+            <p ></p>
             <p> 2022 </p>
           </div></a>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> 窓のような時計 </p>
-            <p>オブジェクト</p>
+            <p></p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>宝飾</p>
-            <p>オブジェクト</p>
+            <p></p>
             <p> 2021, 2022</p>
           </div></a>
 
-
-
-
-        </section>
-        <br>
-        <br>
-        <section>
-
-          <p> 2021</p>
-
-          <div class="listSplit">
-            <p>名称</p>
-            <p>種類</p>
-            <p>年</p>
-          </div>
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > 居心地を探す服</p>
-            <p>服</p>
-            <p> 2021</p>
-          </div></a>
-          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>駅巡り  (MV)</p>
-            <p>その他</p>
-            <p> 2021</p>
-          </div></a>
-
-
-        </section>
-        <br>
-        <br>
-        <section>
-          <p> 2020</p>
-
-          <div class="listSplit">
-            <p>名称</p>
-            <p>種類</p>
-            <p>年</p>
-          </div>
           <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > ビルド・イット付箋 </p>
-            <p>オブジェクト</p>
+            <p></p>
             <p> 2020 </p>
           </div></a>
+        </section>
+        <br>
+        <br>
+        <section>
+          <p> グラフィック</p>
+
+          <div class="listSplit">
+            <p>名称</p>
+            <p></p>
+            <p>年</p>
+          </div>
+
+          <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > 絵 </p>
+            <p ></p>
+            <p> 2023 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
-            <p> 練り歩くオブジェクトたち  </p>
-            <p>グラフィック</p>
+            <p> 練り歩くオブジェクトたち </p>
+            <p></p>
             <p> 2020</p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> 緑の線 </p>
-            <p>グラフィック</p>
+            <p></p>
             <p> 2020</p>
+          </div></a>
+          <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> ロゴ </p>
+            <p></p>
+            <p> 2019 - 今</p>
+          </div></a>
 
-          </div></a>
-          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> 犬の壁</p>
-            <p>建築物</p>
-            <p> 2020</p>
-          </div></a>
+
         </section>
         <br>
         <br>
         <section>
-          <p> 2019</p>
+          <p> 建築物</p>
 
           <div class="listSplit">
             <p>名称</p>
-            <p>種類</p>
+            <p></p>
             <p>年</p>
           </div>
-          <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> ロゴ </p>
-            <p>グラフィック</p>
-            <p> 2019 - 今</p>
-          </div></a>
-        </section>
 
+
+          <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
+            <p > 電波庭 </p>
+            <p></p>
+            <p> 2022 </p>
+          </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> 犬の壁</p>
+            <p></p>
+            <p> 2020</p>
+          </div></a>
+
+
+        </section>
+        <br>
+        <br>
+        <section>
+          <p> 服</p>
+
+          <div class="listSplit">
+            <p>名称</p>
+            <p></p>
+            <p>年</p>
+          </div>
+
+          <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > カフカの娘</p>
+            <p></p>
+            <p> 2023</p>
+          </div></a>
+
+
+          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > 居心地を探す服</p>
+            <p></p>
+            <p> 2021</p>
+          </div></a>
+
+
+        </section>
+        <br>
+        <br>
+        <section>
+          <p> その他</p>
+
+          <div class="listSplit">
+            <p>名称</p>
+            <p></p>
+            <p>年</p>
+          </div>
+
+
+
+          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>屋上アンテナ</p>
+            <p></p>
+            <p> 2021 - 今</p>
+          </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>駅巡り  (MV)</p>
+            <p></p>
+            <p> 2021</p>
+          </div></a>
+
+
+
+        </section>
 
 
       </div>
