add naive machine JP page

--- a/jp/garments.html
+++ b/jp/garments.html
@@ -87,6 +87,12 @@
             <p>年</p>
           </div>
 
+          <a href="javascript:void(0);" onclick="window.open('project/naive-machine.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
+            <p > ナイーブ・マシン</p>
+            <p > </p>
+            <p> 2024 </img></p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > カフカの娘</p>
             <p></p>
