--- a/jp/index.html
+++ b/jp/index.html
@@ -91,7 +91,7 @@
             <p>年</p>
           </div>
           <a href="javascript:void(0);" onclick="window.open('project/naive-machine.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
-            <p > Naïve Machine</p>
+            <p > ナイーブ・マシン</p>
             <p > 服</p>
             <p> 2024 <img src="../image/gallery/naive_machine.jpg" height=20px align=right></img></p>
           </div></a>
