--- a/project/naive-machine.html
+++ b/project/naive-machine.html
@@ -12,7 +12,7 @@
 
     <div class="content">
       <p>My ongoing fashion practice.</p>
-      <p><a href="https://instagram.com/naive_machine/">Follow on Instagram</a></p>
+      <p><a href="https://instagram.com/naive_machine/" target="blank" rel="noreferrer noopener">Follow on Instagram</a></p>
 
       <p><br><br></p>
 
