--- a/jp/cv.html
+++ b/jp/cv.html
@@ -87,8 +87,20 @@
             <p>YEAR</p>
           </div>
 
+          <a href="https://80000voices.org" target="_blank"><div class="listSplit">
+            <p>80,000 Voices <br>Bringing awareness to the Hibakusha through Creative Arts </p>
+            <p>Project Development - Research, Project planning & Coordination, Presentations, Social Media management, Video Editing, Graphic Design</p>
+            <p>2024</p>
+          </div></a>
+
+          <a href="https://venicew.com" target="_blank"><div class="listSplit">
+            <p>VeniceW <br>Fashion label - London</p>
+            <p>Assistant - Creative Assistance, Garment Graphics & Illustration, Patternmaking, Editorial 3D, Photoshoot assistance, Sample transportation</p>
+            <p>2023-2024</p>
+          </div></a>
+
           <a href="https://uo-design.jp" target="_blank"><div class="listSplit">
-            <p>UO Design - Hamamatsu, Japan</p>
+            <p>UO Design<br>Design Studio - Hamamatsu, Japan</p>
             <p>3 Week Internship</p>
             <p>2022</p>
           </div></a>
