--- a/cv.html
+++ b/cv.html
@@ -88,8 +88,20 @@
             <p>YEAR</p>
           </div>
 
+          <a href="https://80000voices.org" target="_blank"><div class="listSplit">
+            <p>80,000 Voices <br>Bringing awareness to the Hibakusha through Creative Arts </p>
+            <p>Project Development - Research, Project planning & Coordination, Presentations, Social Media management, Video Editing, Graphic Design</p>
+            <p>2024</p>
+          </div></a>
+
+          <a href="https://venicew.com" target="_blank"><div class="listSplit">
+            <p>VeniceW <br>Fashion label - London</p>
+            <p>Assistant - Creative Assistance, Garment Graphics & Illustration, Patternmaking, Editorial 3D, Photoshoot assistance, Sample transportation</p>
+            <p>2023-2024</p>
+          </div></a>
+
           <a href="https://uo-design.jp" target="_blank"><div class="listSplit">
-            <p>UO Design - Hamamatsu, Japan</p>
+            <p>UO Design<br>Design Studio - Hamamatsu, Japan</p>
             <p>3 Week Internship</p>
             <p>2022</p>
           </div></a>
@@ -107,7 +119,7 @@
 
           <div class="listSplit">
             <p>Weighted Vessels in a Breathing Room</p>
-            <p>Group show with Tzukasa Kimura, Siin Lee, and Amber Harrisson at AMP Gallery, London.</p>
+            <p>Illustrations included in a group show with Tzukasa Kimura, Siin Lee, and Amber Harrisson at AMP Gallery, London.</p>
             <p>2022</p>
           </div>
 
@@ -244,7 +256,7 @@
             <p>Design, Vector, Layout</p>
           </div>
           <div class="listSplit">
-            <p>Adobe Aftereffects</p>
+            <p>Adobe Premiere</p>
             <p>Beginner Skill</p>
             <p>Video Editing, Animation</p>
           </div>
@@ -257,6 +269,11 @@
             <p>Ableton LIVE</p>
             <p>Intermediate Skill</p>
             <p>Music Composition, Audio, Audio Editing</p>
+          </div>
+          <div class="listSplit">
+            <p>Clo3D</p>
+            <p>Intermediate Skill</p>
+            <p>Digital Patternmaking, Garment visualisation</p>
           </div>
 
 
