remove directory page, change memo to writing/文章

--- a/jp/directory.html
+++ b/jp/directory.html
@@ -59,8 +59,7 @@
 
           <a href="bio.html"><li>プロファイル</li></a>
           <a href="cv.html"><li>履歴書</li></a>
-          <a href="memo.html" ><li>メモ </li></a>
-          <a href="directory.html"><li>ディレクトリー :</li></a>
+          <a href="memo.html" ><li>文章 </li></a>
           <br>
           <li id="external"><a href="https://instagram.com/caleb_wdwrd" target="blank" rel="noreferrer noopener">インスタグラム</a></li>
           <li id="external"><a href="mailto:info@caleb-woodward.net">メール</a></li>
@@ -100,12 +99,6 @@
             <p> STUDIO </p>
           </div></a>
 
-          <a href="http://ndc.co.jp" target="blank"><div class="listSplit">
-            <p>ndc.co.jp</p>
-            <p id="info">NIPPON DESIGN CENTER (JP)</p>
-            <p> STUDIO </p>
-          </div></a>
-
           <a href="http://ndc.co.jp/hara/" target="blank"><div class="listSplit">
             <p>ndc.co.jp/hara</p>
             <p id="info">KENYA HARA (jp)</p>
@@ -115,12 +108,6 @@
           <a href="http://misawa.ndc.co.jp" target="blank"><div class="listSplit">
             <p>misawa.ndc.co.jp</p>
             <p id="info">HARUKA MISAWA (jp)</p>
-            <p> DESIGNER </p>
-          </div></a>
-
-          <a href="https://naotofukasawa.com" target="blank"><div class="listSplit">
-            <p>naotofukasawa.com</p>
-            <p id="info">NAOTO FUKASAWA (jp)</p>
             <p> DESIGNER </p>
           </div></a>
 
