--- a/memo.html
+++ b/memo.html
@@ -60,10 +60,8 @@
 
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
-          <a href="memo.html"><li>Memo :</li></a>
+          <a href="memo.html"><li>Writing :</li></a>
 
-
-          <a href="directory.html"><li>Directory</li></a>
           <br>
           <li id="external"><a href="https://instagram.com/caleb_wdwrd" target="blank" rel="noreferrer noopener">ig</a></li>
           <li id="external"><a href="mailto:info@caleb-woodward.net">email</a></li>
