--- a/jp/gallery.html
+++ b/jp/gallery.html
@@ -58,8 +58,7 @@
 
           <a href="bio.html"><li>プロファイル</li></a>
           <a href="cv.html"><li>履歴書</li></a>
-          <a href="memo.html" ><li>メモ </li></a>
-          <a href="directory.html"><li>ディレクトリー</li></a>
+          <a href="memo.html" ><li>文章 </li></a>
           <br>
           <li id="external"><a href="https://instagram.com/caleb_wdwrd" target="blank" rel="noreferrer noopener">インスタグラム</a></li>
           <li id="external"><a href="mailto:info@caleb-woodward.net">メール</a></li>
@@ -84,7 +83,7 @@
         <p></p>
         <p></p>
         <p></p>
-        <a href="javascript:void(0);" onclick="window.open('project/naive_machine.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="../image/gallery/naive-machine.jpg"></img></a>
+        <a href="javascript:void(0);" onclick="window.open('project/naive-machine.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="../image/gallery/naive_machine.jpg"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="../image/gallery/illustration.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="../image/gallery/kafka.jpeg"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="../image/gallery/radiofield.png"></img></a>
