--- a/jp/others.html
+++ b/jp/others.html
@@ -58,8 +58,7 @@
 
           <a href="bio.html"><li>プロファイル</li></a>
           <a href="cv.html"><li>履歴書</li></a>
-          <a href="memo.html" ><li>メモ </li></a>
-          <a href="directory.html"><li>ディレクトリー</li></a>
+          <a href="memo.html" ><li>文章 </li></a>
           <br>
           <li id="external"><a href="https://instagram.com/caleb_wdwrd" target="blank" rel="noreferrer noopener">インスタグラム</a></li>
           <li id="external"><a href="mailto:info@caleb-woodward.net">メール</a></li>
