--- a/jp/cv.html
+++ b/jp/cv.html
@@ -87,7 +87,7 @@
           </div>
 
           <a href="https://80000voices.org" target="_blank"><div class="listSplit">
-            <p>80,000 Voices <br>Bringing awareness to the Hibakusha through Creative Arts </p>
+            <p>80,000 Voices <br>Bringing awareness to the Hibakusha through the Creative Arts - London </p>
             <p>Project Development - Research, Project planning & Coordination, Presentations, Social Media management, Video Editing, Graphic Design</p>
             <p>2024</p>
           </div></a>
@@ -96,6 +96,12 @@
             <p>VeniceW <br>Fashion label - London</p>
             <p>Assistant - Creative Assistance, Garment Graphics & Illustration, Patternmaking, Editorial 3D, Photoshoot assistance, Sample transportation</p>
             <p>2023-2024</p>
+          </div></a>
+
+          <a href="https://soundcloud.com/altamirarecords" target="_blank"><div class="listSplit">
+            <p>Altamira Records <br>Record Label - New York (remote)</p>
+            <p>Creator - Monthly Radio Show 'Rooftop Antenna', focussed on experimental, eclectic, and ambient music featuring guest mixes from musicians across the world.</p>
+            <p>2023-</p>
           </div></a>
 
           <a href="https://uo-design.jp" target="_blank"><div class="listSplit">
@@ -267,6 +273,11 @@
             <p>Ableton LIVE</p>
             <p>Intermediate Skill</p>
             <p>Music Composition, Audio, Audio Editing</p>
+          </div>
+          <div class="listSplit">
+            <p>Clo3D</p>
+            <p>Intermediate Skill</p>
+            <p>Digital Patternmaking, Garment visualisation</p>
           </div>
 
 
